Swagger specifications of product
