# src/main/java/com/nxg/nxgecomm/api/ProductApi.java
@@ -5,7 +5,7 @@
  */
 package com.nxg.nxgecomm.api;
 
-import com.nxg.nxgecomm.api.model.CustomerDetails;
+import com.nxg.nxgecomm.api.model.Products;
 import io.swagger.annotations.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -30,40 +30,40 @@ import java.util.Optional;
 @javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-03-10T13:58:41.564107300+05:30[Asia/Calcutta]")
 
 @Validated
-@Api(value = "customer", description = "the customer API")
-public interface CustomerApi {
+@Api(value = "product", description = "the product API")
+public interface ProductApi {
 
     default Optional<NativeWebRequest> getRequest() {
         return Optional.empty();
     }
 
     /**
-     * GET /customer : Getting all customer details
+     * GET /product : Getting all products details
      *
-     * @return A list of all customer details (status code 200)
+     * @return A list of all products details (status code 200)
      *         or Successful (status code 201)
      *         or Bad request input (status code 400)
      *         or Data not found (status code 404)
      *         or Invalid input (status code 500)
      *         or Bad Gatway (status code 502)
      */
-    @ApiOperation(value = "Getting all customer details", nickname = "customerGet", notes = "", response = CustomerDetails.class, tags={ "Customer Information", })
+    @ApiOperation(value = "Getting all products details", nickname = "productGet", notes = "", response = Products.class, tags={ "Product Information", })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "A list of all customer details", response = CustomerDetails.class),
+        @ApiResponse(code = 200, message = "A list of all products details", response = Products.class),
         @ApiResponse(code = 201, message = "Successful"),
         @ApiResponse(code = 400, message = "Bad request input"),
         @ApiResponse(code = 404, message = "Data not found"),
         @ApiResponse(code = 500, message = "Invalid input"),
         @ApiResponse(code = 502, message = "Bad Gatway") })
-    @RequestMapping(value = "/customer",
+    @RequestMapping(value = "/product",
         produces = { "applicantion/json" }, 
         method = RequestMethod.GET)
-    default ResponseEntity<CustomerDetails> _customerGet() {
-        return customerGet();
+    default ResponseEntity<Products> _productGet() {
+        return productGet();
     }
 
     // Override this method
-    default  ResponseEntity<CustomerDetails> customerGet() {
+    default  ResponseEntity<Products> productGet() {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf(""))) {
@@ -79,63 +79,94 @@ public interface CustomerApi {
 
 
     /**
-     * DELETE /customer/{id} : Delete a customer
+     * POST /product : Adding a new product
      *
-     * @param id  (required)
+     * @param body product details that needs to be added (required)
      * @return Successful (status code 201)
      *         or Bad request input (status code 400)
      *         or Data not found (status code 404)
      *         or Invalid input (status code 500)
      *         or Bad Gatway (status code 502)
      */
-    @ApiOperation(value = "Delete a customer", nickname = "customerIdDelete", notes = "", tags={ "Customer Information", })
+    @ApiOperation(value = "Adding a new product", nickname = "productPost", notes = "", tags={ "Product Information", })
     @ApiResponses(value = { 
         @ApiResponse(code = 201, message = "Successful"),
         @ApiResponse(code = 400, message = "Bad request input"),
         @ApiResponse(code = 404, message = "Data not found"),
         @ApiResponse(code = 500, message = "Invalid input"),
         @ApiResponse(code = 502, message = "Bad Gatway") })
-    @RequestMapping(value = "/customer/{id}",
-        method = RequestMethod.DELETE)
-    default ResponseEntity<Void> _customerIdDelete(@ApiParam(value = "",required=true) @PathVariable("id") Integer id) {
-        return customerIdDelete(id);
+    @RequestMapping(value = "/product",
+        consumes = { "application/json" },
+        method = RequestMethod.POST)
+    default ResponseEntity<Void> _productPost(@ApiParam(value = "product details that needs to be added" ,required=true )  @Valid @RequestBody Products body) {
+        return productPost(body);
     }
 
     // Override this method
-    default  ResponseEntity<Void> customerIdDelete(Integer id) {
+    default  ResponseEntity<Void> productPost(Products body) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
     }
 
 
     /**
-     * GET /customer/{id} : Getting Customer details by id
+     * DELETE /product/{productId} : Delete a product
      *
-     * @param id  (required)
-     * @return A list of a customer&#39;s details (status code 200)
+     * @param productId  (required)
+     * @return Successful (status code 201)
+     *         or Bad request input (status code 400)
+     *         or Data not found (status code 404)
+     *         or Invalid input (status code 500)
+     *         or Bad Gatway (status code 502)
+     */
+    @ApiOperation(value = "Delete a product", nickname = "productProductIdDelete", notes = "", tags={ "Product Information", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 201, message = "Successful"),
+        @ApiResponse(code = 400, message = "Bad request input"),
+        @ApiResponse(code = 404, message = "Data not found"),
+        @ApiResponse(code = 500, message = "Invalid input"),
+        @ApiResponse(code = 502, message = "Bad Gatway") })
+    @RequestMapping(value = "/product/{productId}",
+        method = RequestMethod.DELETE)
+    default ResponseEntity<Void> _productProductIdDelete(@ApiParam(value = "",required=true) @PathVariable("productId") Integer productId) {
+        return productProductIdDelete(productId);
+    }
+
+    // Override this method
+    default  ResponseEntity<Void> productProductIdDelete(Integer productId) {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    /**
+     * GET /product/{productId} : Getting product details by id
+     *
+     * @param productId  (required)
+     * @return A list of a product details (status code 200)
      *         or Successful (status code 201)
      *         or Bad request input (status code 400)
      *         or Data not found (status code 404)
      *         or Invalid input (status code 500)
      *         or Bad Gatway (status code 502)
      */
-    @ApiOperation(value = "Getting Customer details by id", nickname = "customerIdGet", notes = "", response = CustomerDetails.class, tags={ "Customer Information", })
+    @ApiOperation(value = "Getting product details by id", nickname = "productProductIdGet", notes = "", response = Products.class, tags={ "Product Information", })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "A list of a customer's details", response = CustomerDetails.class),
+        @ApiResponse(code = 200, message = "A list of a product details", response = Products.class),
         @ApiResponse(code = 201, message = "Successful"),
         @ApiResponse(code = 400, message = "Bad request input"),
         @ApiResponse(code = 404, message = "Data not found"),
         @ApiResponse(code = 500, message = "Invalid input"),
         @ApiResponse(code = 502, message = "Bad Gatway") })
-    @RequestMapping(value = "/customer/{id}",
+    @RequestMapping(value = "/product/{productId}",
         produces = { "applicantion/json" }, 
         method = RequestMethod.GET)
-    default ResponseEntity<CustomerDetails> _customerIdGet(@ApiParam(value = "",required=true) @PathVariable("id") Integer id) {
-        return customerIdGet(id);
+    default ResponseEntity<Products> _productProductIdGet(@ApiParam(value = "",required=true) @PathVariable("productId") Integer productId) {
+        return productProductIdGet(productId);
     }
 
     // Override this method
-    default  ResponseEntity<CustomerDetails> customerIdGet(Integer id) {
+    default  ResponseEntity<Products> productProductIdGet(Integer productId) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf(""))) {
@@ -151,35 +182,35 @@ public interface CustomerApi {
 
 
     /**
-     * PUT /customer/{id} : Editing customer details
+     * PUT /product/{productId} : Editing product details
      *
-     * @param id  (required)
-     * @param body Customer details that need to be added (required)
-     * @return A list of a customer&#39;s details (status code 200)
+     * @param productId  (required)
+     * @param body Product details that need to be added (required)
+     * @return A list of a product details (status code 200)
      *         or Successful (status code 201)
      *         or Bad request input (status code 400)
      *         or Data not found (status code 404)
      *         or Invalid input (status code 500)
      *         or Bad Gatway (status code 502)
      */
-    @ApiOperation(value = "Editing customer details", nickname = "customerIdPut", notes = "", response = CustomerDetails.class, tags={ "Customer Information", })
+    @ApiOperation(value = "Editing product details", nickname = "productProductIdPut", notes = "", response = Products.class, tags={ "Product Information", })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "A list of a customer's details", response = CustomerDetails.class),
+        @ApiResponse(code = 200, message = "A list of a product details", response = Products.class),
         @ApiResponse(code = 201, message = "Successful"),
         @ApiResponse(code = 400, message = "Bad request input"),
         @ApiResponse(code = 404, message = "Data not found"),
         @ApiResponse(code = 500, message = "Invalid input"),
         @ApiResponse(code = 502, message = "Bad Gatway") })
-    @RequestMapping(value = "/customer/{id}",
+    @RequestMapping(value = "/product/{productId}",
         produces = { "applicantion/json" }, 
         consumes = { "applicantion/json" },
         method = RequestMethod.PUT)
-    default ResponseEntity<CustomerDetails> _customerIdPut(@ApiParam(value = "",required=true) @PathVariable("id") Integer id,@ApiParam(value = "Customer details that need to be added" ,required=true )  @Valid @RequestBody CustomerDetails body) {
-        return customerIdPut(id, body);
+    default ResponseEntity<Products> _productProductIdPut(@ApiParam(value = "",required=true) @PathVariable("productId") Integer productId,@ApiParam(value = "Product details that need to be added" ,required=true )  @Valid @RequestBody Products body) {
+        return productProductIdPut(productId, body);
     }
 
     // Override this method
-    default  ResponseEntity<CustomerDetails> customerIdPut(Integer id, CustomerDetails body) {
+    default  ResponseEntity<Products> productProductIdPut(Integer productId, Products body) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf(""))) {
@@ -189,37 +220,6 @@ public interface CustomerApi {
                 }
             }
         });
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-
-    /**
-     * POST /customer : Adding a new customer
-     *
-     * @param body customer details that needs to be added (required)
-     * @return Successful (status code 201)
-     *         or Bad request input (status code 400)
-     *         or Data not found (status code 404)
-     *         or Invalid input (status code 500)
-     *         or Bad Gatway (status code 502)
-     */
-    @ApiOperation(value = "Adding a new customer", nickname = "customerPost", notes = "", tags={ "Customer Information", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 201, message = "Successful"),
-        @ApiResponse(code = 400, message = "Bad request input"),
-        @ApiResponse(code = 404, message = "Data not found"),
-        @ApiResponse(code = 500, message = "Invalid input"),
-        @ApiResponse(code = 502, message = "Bad Gatway") })
-    @RequestMapping(value = "/customer",
-        consumes = { "application/json" },
-        method = RequestMethod.POST)
-    default ResponseEntity<Void> _customerPost(@ApiParam(value = "customer details that needs to be added" ,required=true )  @Valid @RequestBody CustomerDetails body) {
-        return customerPost(body);
-    }
-
-    // Override this method
-    default  ResponseEntity<Void> customerPost(CustomerDetails body) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
     }
